Staging deployment update

--- a/overlays/staging/staging-patch.yaml
+++ b/overlays/staging/staging-patch.yaml
@@ -31,11 +31,9 @@ spec:
             - containerPort: 3306
           env:
             - name: MYSQL_ROOT_PASSWORD
-              value: "userpassword"
+              value: "rootpassword"
             - name: MYSQL_DATABASE
               value: "medical"
-            - name: MYSQL_USER
-              value: "user"
             - name: MYSQL_PASSWORD
               value: "userpassword"
           volumeMounts:
