--- a/overlays/staging/kustomization.yaml
+++ b/overlays/staging/kustomization.yaml
@@ -1,5 +1,6 @@
-bases:
-  - ../../base
-
-patchesStrategicMerge:
-  - staging-patch.yaml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+resources:
+- ../../base
+patches:
+- path: staging-patch.yaml
