--- a/overlays/testing/docker-compose.yaml
+++ b/overlays/testing/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: medical
+      MYSQL_USER: user
       MYSQL_PASSWORD: userpassword
     ports:
       - "3306:3306"
