Staging deployment update

--- a/overlays/testing/docker-compose.yaml
+++ b/overlays/testing/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: medical
-      MYSQL_USER: user
-      MYSQL_PASSWORD: userpassword
+      MYSQL_USER: medical_user
+      MYSQL_PASSWORD: medicalpass
     ports:
       - "3306:3306"
     networks:
@@ -29,8 +29,8 @@ services:
       - FLASK_ENV=development
       - PORT=5000
       - DB_HOST=mysql
-      - DB_USER=user
-      - DB_PASSWORD=userpassword
+      - DB_USER=medical_user
+      - DB_PASSWORD=medicalpass
       - DB_NAME=medical
 
   phpmyadmin:
